# grimoirelab-cereslib

./: .flake8  .travis.yml  AUTHORS  MANIFEST.in  NEWS  README.md  areas_code.py  enrich.py  events.py  filter.py  format.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: changelog.yml  ci.yml  release.yml  tests.yml
ceres/: __init__.py
cereslib/: __init__.py  _version.py
cereslib/dfutils/: filter.py  format.py
cereslib/enrich/: enrich.py
cereslib/events/: events.py
df_utils/: format.py
enrich/: enrich.py
events/: events.py
examples/: areas_code.py  engines_analysis.py  openstack_gender.py
releases/: 0.2.0.md  0.3.0.md  0.3.1.md  0.3.2-rc.1.md  0.3.2-rc.2.md  0.3.2-rc.3.md  0.3.2-rc.4.md  0.3.2.md  0.3.3.md  0.3.4-rc.1.md  0.3.4-rc.2.md  0.3.4.md  0.3.5.md  0.3.6-rc.1.md  0.3.6-rc.2.md  0.3.6-rc.3.md  0.3.6.md  0.4.0-rc.1.md  0.4.0.md  0.4.1-rc.1.md  0.4.1.md  0.4.2-rc.1.md  0.4.2.md  0.4.3-rc.1.md  0.4.3.md  0.5.0-rc.1.md  0.5.0.md  0.5.1-rc.1.md  0.5.1.md  0.5.2-rc.1.md  0.5.2.md  0.5.3-rc.1.md  0.5.3.md  0.5.4-rc.1.md  0.5.4.md  0.5.5-rc.1.md  0.5.5.md  0.5.6-rc.1.md  0.5.6.md  1.0.0-rc.1.md  (+7 more)
releases/unreleased/: add-more-file-extensions-to-filetype-method.yml  elk-dependency-removed.yml  explicit-regex-option-in-replace.yml  update-package-dependencies.yml
releases/unreleased/processed/: timezone-field-in-git-areas-of-code.yml
tests/: manual_test_events.py  run_tests.py  test_enrich.py  test_events.py  test_filter.py  test_format.py
tests/data/: projects_map.json
(+6 files in other folders)
