[tool.poetry]
name = "cereslib"
version = "0.5.1"
description = "GrimoireLab: Unify, eventize and enrich information from Perceval"
authors = [
    "GrimoireLab Developers"
]
license = "GPL-3.0+"

readme = "README.md"

homepage = "https://chaoss.github.io/grimoirelab/"
repository = "https://github.com/chaoss/grimoirelab-cereslib"

keywords = [
    "development",
    "grimoirelab"
]

packages = [
    { include = "cereslib" },
    { include = "tests", format = "sdist" },
]

include = [
    { path = "AUTHORS", format = "sdist" },
    { path = "NEWS", format = "sdist" },
    { path = "README.md", format = "sdist" },
]

classifiers = [
   "Development Status :: 4 - Beta",
   "Intended Audience :: Developers",
   "Intended Audience :: Science/Research",
   "Topic :: Software Development",
   "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
   "Programming Language :: Python :: 3"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/chaoss/grimoirelab-cereslib/issues"

[tool.poetry.dependencies]
python = "^3.8"

numpy = "<1.22.1"
six = "^1.16.0"
scipy = "^1.5"
pandas = "^1.3.5"
grimoirelab-toolkit = { version = ">=0.3", allow-prereleases = true }

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
coverage = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
